--- a/src/components/Toggle/Toggle.module.scss
+++ b/src/components/Toggle/Toggle.module.scss
@@ -3,5 +3,7 @@
     left: 2rem;
     width: 5rem;
     border: 1px solid #f79414;
+    align-items: center;
+    justify-content: flex-end;
   }
   
