--- a/src/containers/BitcoinLoader/BitcoinLoader.module.scss
+++ b/src/containers/BitcoinLoader/BitcoinLoader.module.scss
@@ -1,14 +1,19 @@
-.nav {
-    //background-color: greenyellow;
-    border-bottom: 3px solid rgb(80, 80, 80, 0.2);
-    padding: 15px;
-    width: 100vw;
-    position: fixed;
-    top: 0%;
-    img {
-      width: 2rem;
-    }
-  }
+// .nav {
+//     border-bottom: 3px solid rgb(80, 80, 80, 0.2);
+//     padding: 15px;
+//     width: 100vw;
+//     position: fixed;
+//     top: 0%;
+//     img {
+//       width: 2rem;
+//     }
+//   }
+.heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight:bold;
+}
   
   .priceContainer {
     display: flex;
