--- a/src/containers/BitcoinLoader/BitcoinLoader.module.scss
+++ b/src/containers/BitcoinLoader/BitcoinLoader.module.scss
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight:bold;
+    font-weight:bolder;
 }
   
   .priceContainer {
